force-app/main/default/objects/Emergency_Escalation__c/Emergency_Escalation__c.object-meta.xml
<CustomObject>
    <description>The exception, recorded as one. Curb Cut never routes anyone to a telephone; this is the narrow path for a squad handling something unforeseen, such as a family member reaching out about someone. Every use is logged with a stated reason, because a call nobody asked for is a contact the person did not choose.</description>
    <label>Emergency Escalation</label>
    <nameField><label>Escalation Number</label><type>AutoNumber</type><displayFormat>ES-{00000}</displayFormat></nameField>
    <pluralLabel>Emergency Escalations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>