force-app/main/default/objects/Emergency_Escalation__c/fields/Barrier_Report__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Report__c</fullName>
    <description>What the person had already told us.</description>
    <inlineHelpText>What they already said is hard. Read it before you act on somebody else's account of them.</inlineHelpText>
    <label>Barrier Report</label>
    <referenceTo>Barrier_Report__c</referenceTo>
    <relationshipLabel>Emergency Escalations</relationshipLabel>
    <relationshipName>Emergency_Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>