force-app/main/default/objects/Emergency_Escalation__c/fields/Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Callback_Number__c</fullName>
    <description>A number volunteered during this escalation only. Never taken from the system, because the system does not hold one.</description>
    <inlineHelpText>Only a number somebody gave you just now, for this. Curb Cut stores no phone numbers at all, so nothing here came from a record. Clear it when the escalation closes.</inlineHelpText>
    <label>Callback Number Given</label>
    <type>Phone</type>
</CustomField>