force-app/main/default/objects/Emergency_Escalation__c/fields/Caller_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Caller_Relationship__c</fullName>
    <description>Who raised the concern, in relation to the person the record is about.</description>
    <inlineHelpText>Who brought this to us. A family member acting out of worry is still someone speaking about a person who did not choose it, so record it honestly.</inlineHelpText>
    <label>Raised By Whom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>The person themselves</fullName><default>true</default><label>The person themselves</label></value>
            <value><fullName>A family member</fullName><default>false</default><label>A family member</label></value>
            <value><fullName>A colleague or manager</fullName><default>false</default><label>A colleague or manager</label></value>
            <value><fullName>Someone else</fullName><default>false</default><label>Someone else</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>