force-app/main/default/objects/Emergency_Escalation__c/fields/Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Closed_At__c</fullName>
    <description>When it was resolved.</description>
    <inlineHelpText>When it ended. Close it and clear any callback number you were given.</inlineHelpText>
    <label>Closed At</label>
    <type>DateTime</type>
</CustomField>