force-app/main/default/objects/Emergency_Escalation__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>What happened, for the person reading this later.</description>
    <inlineHelpText>What actually happened. Write it for whoever reviews this, not for the file.</inlineHelpText>
    <label>Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>