force-app/main/default/objects/Emergency_Escalation__c/fields/Raised_At__c.field-meta.xml
<CustomField>
    <fullName>Raised_At__c</fullName>
    <description>When the escalation was raised.</description>
    <inlineHelpText>When it was raised. The gap between this and Closed At is how long an unforeseen situation went unresolved.</inlineHelpText>
    <label>Raised At</label>
    <type>DateTime</type>
</CustomField>