force-app/main/default/objects/Emergency_Escalation__c/fields/Raised_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Name__c</fullName>
    <description>Who raised it.</description>
    <inlineHelpText>Who raised it. Your name goes here so nobody has to work out later who made the call.</inlineHelpText>
    <label>Raised By</label>
    <length>121</length>
    <type>Text</type>
</CustomField>