force-app/main/default/objects/Emergency_Escalation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Why this exception was made. Mandatory, and the friction is the point.</description>
    <inlineHelpText>Say what happened, in a sentence somebody reviewing this in six months could understand. Curb Cut does not route people to telephones, so every call needs a reason that survives being read back.</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>