force-app/main/default/objects/Emergency_Escalation__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <description>Which duty squad was raised.</description>
    <inlineHelpText>Who you are reaching. This dials a colleague, never the person the record is about.</inlineHelpText>
    <label>Squad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Safeguarding lead</fullName><default>true</default><label>Safeguarding lead</label></value>
            <value><fullName>Access team lead</fullName><default>false</default><label>Access team lead</label></value>
            <value><fullName>HR duty officer</fullName><default>false</default><label>HR duty officer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>