force-app/main/default/objects/Emergency_Escalation__c/listViews/All_Escalations.listView-meta.xml
<ListView>
    <fullName>All_Escalations</fullName>
    <columns>NAME</columns>
    <columns>Raised_At__c</columns>
    <columns>Squad__c</columns>
    <columns>Caller_Relationship__c</columns>
    <columns>Person_Knows__c</columns>
    <columns>Reason__c</columns>
    <columns>Closed_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All escalations</label>
</ListView>