force-app/main/default/objects/Emergency_Escalation__c/listViews/Still_Open.listView-meta.xml
<ListView>
    <fullName>Still_Open</fullName>
    <columns>NAME</columns>
    <columns>Raised_At__c</columns>
    <columns>Squad__c</columns>
    <columns>Reason__c</columns>
    <columns>Callback_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed_At__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Still open</label>
</ListView>